--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       crossorigin="anonymous"
     />
     <script
+      src="https://kit.fontawesome.com/ffded63a3c.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
@@ -30,5 +34,6 @@
   <body>
     <h1>Hello World</h1>
     <h2 class="bg-warning">This is a challenge</h2>
+    <i class="fa-brands fa-instagram"></i>
   </body>
 </html>
