--- a/index.html
+++ b/index.html
@@ -32,8 +32,28 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <h2 class="bg-warning">This is a challenge</h2>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="container">
+      <div class="row mt-5">
+        <div class="col-md-6">
+          <img
+            src="/images/female developer.svg"
+            class="img-fluid womanCoding mt-3"
+            alt="woman coding"
+          />
+        </div>
+
+        <div class="col-md-6">
+          <h1 class="mb-2 text-center">Marisa Salazar</h1>
+          <h2 class="text-center mt-3">
+            Front-end developer based in Southern Arizona
+          </h2>
+          <div class="row d-flex justify-content-center align-content-center">
+            <a href="#" class="btn btn-branding" title="Contact Marisa">
+              Contact Me</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
