--- a/index.html
+++ b/index.html
@@ -32,25 +32,46 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row mt-5">
-        <div class="col-md-6">
-          <img
-            src="/images/female developer.svg"
-            class="img-fluid womanCoding mt-3"
-            alt="woman coding"
-          />
-        </div>
+    <div class="hero">
+      <div class="container">
+        <div class="row mt-5">
+          <div class="col-md-6">
+            <img
+              src="/images/female developer.svg"
+              class="img-fluid womanCoding mt-3"
+              alt="woman coding"
+            />
+          </div>
 
-        <div class="col-md-6">
-          <h1 class="mb-2 text-center">Marisa Salazar</h1>
-          <h2 class="text-center mt-3">
-            Front-end developer based in Southern Arizona
-          </h2>
-          <div class="row d-flex justify-content-center align-content-center">
-            <a href="#" class="btn btn-branding" title="Contact Marisa">
-              Contact Me</a
-            >
+          <div class="col-md-6">
+            <h3 class="mt-5">Hello, I am</h3>
+            <h1 class="mb-2 mt-3 text-center">Marisa Salazar</h1>
+            <h2 class="text-center mt-4">
+              Front-end developer based in Southern Arizona
+            </h2>
+            <div class="navigationLinks">
+              <a
+                href="#"
+                title="About Marisa"
+                class="btn btn-outline-primary navLinkBtn"
+              >
+                About</a
+              >
+              <a
+                href="#"
+                title="Marisa's Projects"
+                class="btn btn-outline-primary navLinkBtn"
+              >
+                Projects</a
+              >
+              <a
+                href="#"
+                title="Contact Marisa"
+                class="btn btn-outline-primary navLinkBtn"
+              >
+                Contact
+              </a>
+            </div>
           </div>
         </div>
       </div>
