--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="hero">
       <div class="container">
         <div class="row mt-5">
-          <div class="col-md-6">
+          <div class="col-sm-6 d-none d-lg-block">
             <img
               src="/images/female developer.svg"
               class="img-fluid womanCoding mt-3"
@@ -43,11 +43,11 @@
             />
           </div>
 
-          <div class="col-md-6">
-            <h3 class="mt-5">Hello, I am</h3>
+          <div class="col-sm-6">
+            <h3 class="mt-5 text-center">Hello, I am</h3>
             <h1 class="mb-2 mt-3 text-center">Marisa Salazar</h1>
             <h2 class="text-center mt-4">
-              Front-end developer based in Southern Arizona
+              Front-end Developer based in Southern Arizona
             </h2>
             <div class="navigationLinks">
               <a
