--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             />
           </div>
 
-          <div class="col-sm-6">
+          <div class="col-lg-6">
             <h3 class="mt-5 text-center">Hello, I am</h3>
             <h1 class="mb-2 mt-3 text-center">Marisa Salazar</h1>
             <h2 class="text-center mt-4">
