created "About" page and made grid responsive

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     />
     <link rel="stylesheet" href="/style/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Marisa's Portfolio</title>
   </head>
-  <body>
+  <body class="homepage">
     <div class="hero">
       <div class="container">
         <div class="row mt-5">
@@ -45,30 +45,18 @@
 
           <div class="col-lg-6">
             <h3 class="mt-5 text-center">Hello, I am</h3>
-            <h1 class="mb-2 mt-3 text-center">Marisa Salazar</h1>
-            <h2 class="text-center mt-4">
+            <h1 class="mb-2 text-center">Marisa Salazar</h1>
+            <h2 class="text-center mt-3 lh-base">
               Front-end Developer based in Southern Arizona
             </h2>
             <div class="navigationLinks">
-              <a
-                href="#"
-                title="About Marisa"
-                class="btn btn-outline-primary navLinkBtn"
-              >
+              <a href="/about.html" title="About Marisa" class="btn navLinkBtn">
                 About</a
               >
-              <a
-                href="#"
-                title="Marisa's Projects"
-                class="btn btn-outline-primary navLinkBtn"
-              >
+              <a href="#" title="Marisa's Projects" class="btn navLinkBtn">
                 Projects</a
               >
-              <a
-                href="#"
-                title="Contact Marisa"
-                class="btn btn-outline-primary navLinkBtn"
-              >
+              <a href="#" title="Contact Marisa" class="btn navLinkBtn">
                 Contact
               </a>
             </div>
@@ -76,5 +64,6 @@
         </div>
       </div>
     </div>
+    <footer class="homeFooter">Coded by Marisa Salazar</footer>
   </body>
 </html>
