--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
               <a href="/about.html" title="About Marisa" class="btn navLinkBtn">
                 About</a
               >
-              <a href="#" title="Marisa's Projects" class="btn navLinkBtn">
+              <a
+                href="/projects.html"
+                title="Marisa's Projects"
+                class="btn navLinkBtn"
+              >
                 Projects</a
               >
               <a href="#" title="Contact Marisa" class="btn navLinkBtn">
