added contact section & made responsive

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
               >
                 Projects</a
               >
-              <a href="#" title="Contact Marisa" class="btn navLinkBtn">
+              <a
+                href="/index.html#contact"
+                title="Contact Marisa"
+                class="btn navLinkBtn"
+              >
                 Contact
               </a>
             </div>
@@ -68,6 +72,53 @@
         </div>
       </div>
     </div>
-    <footer class="homeFooter">Coded by Marisa Salazar</footer>
+    <div class="contactMe" id="contact">
+      <br /><br />
+      <div class="icon">
+        <i class="fa-solid fa-angles-down fa-2xl" style="color: #51b4c4"></i>
+      </div>
+      <br /><br />
+      <h2>Get In Touch</h2>
+      <br />
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 icon">
+            <i class="fa-solid fa-envelope fa-2xl"></i>
+          </div>
+          <div class="col-lg-4 icon">
+            <i class="fa-brands fa-linkedin fa-2xl"></i>
+          </div>
+          <div class="col-lg-4 icon">
+            <i class="fa-brands fa-square-github fa-2xl"></i>
+          </div>
+          <span class="contactLinks">
+            <div class="col-lg-4 text-center">
+              <a
+                href="mailto:salazar.marisa15@gmail.com"
+                title="Email"
+                class="navLinkBtn"
+                >Email</a
+              >
+            </div>
+            <div class="col-lg-4 text-center">
+              <a
+                href="https://www.linkedin.com/in/marisa-salazar-92aa55271/"
+                title="LinkedIn"
+                class="navLinkBtn"
+                >LinkedIn</a
+              >
+            </div>
+            <div class="col-lg-4 text-center">
+              <a
+                href="https://github.com/Marisa-Salazar"
+                title="GitHub"
+                class="navLinkBtn"
+                >GitHub</a
+              >
+            </div>
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
