--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,75 @@
     <title>Marisa's Projects</title>
   </head>
   <body>
+    <nav
+      class="navbar navbar-custom navbar-expand-lg bg-body-tertiary bg-dark sticky-top"
+      data-bs-theme="dark"
+    >
+      <div class="container-fluid">
+        <a
+          class="navbar-brand"
+          href="index.html"
+          title="Back to Homepage"
+          name="Homepage"
+          >Marisa</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/index.html"
+                title="Back to Homepage"
+                name="Homepage"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="About Marisa"
+                name="About"
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/projects.html"
+                title="Marisa's Projects"
+                name="Projects"
+                >Projects</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/index.html#contact"
+                title="Contact Marisa"
+                name="contact"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
       <h1 class="text-center mt-4 mb-4">Projects</h1>
     </div>
