--- a/index.html
+++ b/index.html
@@ -196,6 +196,15 @@
           </div>
         </div>
       </div>
+      <br /><br />
     </div>
+    <footer>
+      <div class="d-flex justify-content-center">
+        <p class="coded-by d-flex justify-content-center">
+          <a href="#" target="_blank" id="open-source">Open-source code </a>
+          by Marisa Salazar
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
