--- a/projects.html
+++ b/projects.html
@@ -174,6 +174,42 @@
           </div>
         </div>
       </div>
+      <br />
+      <br />
     </div>
+    <footer>
+      <div class="d-flex justify-content-center">
+        <span
+          ><a href="mailto:salazar.marisa15@gmail.com" title="Email Marisa"
+            ><i class="fa-regular fa-envelope" style="color: #bdede3"></i></a
+        ></span>
+        <span
+          ><a
+            href="https://www.linkedin.com/in/marisa-salazar-92aa55271/"
+            title="LinkedIn"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin" style="color: #bdede3"></i></a
+        ></span>
+        <span
+          ><a
+            href="https://github.com/Marisa-Salazar"
+            title="GitHub"
+            target="_blank"
+          >
+            <i class="fa-brands fa-github" style="color: #bdede3"></i> </a
+        ></span>
+      </div>
+      <p class="coded-by d-flex justify-content-center">
+        <a
+          href="https://github.com/Marisa-Salazar/Portfolio-Project"
+          title="GitHub"
+          target="_blank"
+          id="open-source"
+        >
+          Open-source code
+        </a>
+        by M. Salazar
+      </p>
+    </footer>
   </body>
 </html>
