added SEO on all pages

--- a/about.html
+++ b/about.html
@@ -28,6 +28,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style/styles.css" />
+    <meta
+      name="description"
+      content="Front-end Developer - Marisa Salazar Portfolio About Page"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Marisa</title>
   </head>
@@ -62,7 +66,7 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 aria-current="page"
                 href="/index.html"
                 title="Back to Homepage"
@@ -72,7 +76,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link active"
                 href="/about.html"
                 title="About Marisa"
                 name="About"
@@ -115,16 +119,34 @@
               product.
               <br />
               <br />
-              Check out some of my work in the Projects section. I also like
-              sharing content related to the stuff that I have learned in Web
-              Development so it can help other people of the Dev Community.
+              Check out some of my work in the
+              <strong>
+                <a
+                  href="/projects.html"
+                  class="text-decoration-none text-secondary"
+                  title="Marisa's Projects"
+                  >project</a
+                ></strong
+              >
+              section. I also like sharing content related to the stuff that I
+              have learned in Web Development so it can help other people of the
+              Dev Community.
               <br />
               <br />
-              Feel free to Connect or Follow me on my Linkedin where I post
-              useful content related to Web Development and Programming I'm open
-              to Job opportunities where I can contribute, learn and grow. If
-              you have a good opportunity that matches my skills and experience
-              then don't hesitate to contact me.
+              Feel free to Connect or Follow me on my
+              <strong>
+                <a
+                  href="https://www.linkedin.com/in/marisa-salazar-92aa55271/"
+                  target="_blank"
+                  class="text-decoration-none text-secondary"
+                  title="Marisa's LinkedIn"
+                  >LinkedIn</a
+                ></strong
+              >
+              where I post useful content related to Web Development and
+              Programming I'm open to Job opportunities where I can contribute,
+              learn and grow. If you have a good opportunity that matches my
+              skills and experience then don't hesitate to contact me.
             </p>
           </div>
           <div class="content">
