--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style/styles.css" />
+    <meta
+      name="description"
+      content="Front-end Developer - Marisa Salazar Portfolio Homepage and Contact"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marisa's Portfolio</title>
   </head>
@@ -101,59 +105,53 @@
         </div>
       </div>
     </nav>
-    <div class="homepage">
-      <div class="hero">
-        <div class="container">
-          <div class="row mt-3">
-            <div class="col-sm-6 d-none d-lg-block">
-              <img
-                src="/images/female developer.svg"
-                class="img-fluid womanCoding mt-3"
-                alt="woman coding"
-              />
-            </div>
+    <div class="hero">
+      <div class="container">
+        <div class="row mt-3">
+          <div class="col-sm-6 d-none d-lg-block">
+            <img
+              src="/images/female developer.svg"
+              class="img-fluid womanCoding mt-3"
+              alt="woman coding"
+            />
+          </div>
 
-            <div class="col-lg-6">
-              <h3 class="mt-5 text-center">Hello, I am</h3>
-              <h1 class="mb-2 text-center">Marisa Salazar</h1>
-              <h2 class="text-center mt-3 lh-base">
-                Front-end Developer based in Southern Arizona
-              </h2>
-              <div class="navigationLinks">
-                <a
-                  href="/about.html"
-                  title="About Marisa"
-                  class="btn navLinkBtn"
-                >
-                  About</a
-                >
-                <a
-                  href="/projects.html"
-                  title="Marisa's Projects"
-                  class="btn navLinkBtn"
-                >
-                  Projects</a
-                >
-                <a
-                  href="/index.html#contact"
-                  title="Contact Marisa"
-                  class="btn navLinkBtn"
-                >
-                  Contact
-                </a>
-              </div>
+          <div class="col-lg-6">
+            <h3 class="mt-5 text-center">Hello, I am</h3>
+            <h1 class="mb-2 text-center">Marisa Salazar</h1>
+            <h2 class="text-center mt-3 lh-base">
+              Front-end Developer based in Southern Arizona
+            </h2>
+            <div class="navigationLinks">
+              <a href="/about.html" title="About Marisa" class="btn navLinkBtn">
+                About</a
+              >
+              <a
+                href="/projects.html"
+                title="Marisa's Projects"
+                class="btn navLinkBtn"
+              >
+                Projects</a
+              >
+              <a
+                href="/index.html#contact"
+                title="Contact Marisa"
+                class="btn navLinkBtn"
+              >
+                Contact
+              </a>
             </div>
           </div>
         </div>
       </div>
-      <div class="contactMe" id="contact">
+      <div id="contact">
         <br /><br />
         <div class="icon">
           <i class="fa-solid fa-angles-down fa-2xl" style="color: #51b4c4"></i>
         </div>
         <br /><br />
-        <h2>Get In Touch</h2>
-        <br />
+        <h2 class="contactMe">Get In Touch</h2>
+        <br /><br />
         <div class="container">
           <div class="row">
             <div class="col-lg-4 icon">
@@ -196,7 +194,6 @@
           </div>
         </div>
       </div>
-      <br /><br />
     </div>
     <footer>
       <div class="d-flex justify-content-center">
