--- a/projects.html
+++ b/projects.html
@@ -28,6 +28,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/style/styles.css" />
+    <meta
+      name="description"
+      content="Front-end Developer - Marisa Salazar Portfolio Projects"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Marisa's Projects</title>
   </head>
@@ -62,7 +66,7 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a
-                class="nav-link active"
+                class="nav-link"
                 aria-current="page"
                 href="/index.html"
                 title="Back to Homepage"
@@ -81,7 +85,7 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link active"
                 href="/projects.html"
                 title="Marisa's Projects"
                 name="Projects"
@@ -123,7 +127,13 @@
               others in different time zones.
             </p>
             <div class="mt-5">
-              <a href="#" class="primary-link">View Project </a>
+              <a
+                href="https://soft-rabanadas-cf3f4e.netlify.app"
+                target="_blank"
+                title="View World Clock"
+                class="primary-link"
+                >View Project
+              </a>
             </div>
           </div>
         </div>
@@ -140,7 +150,14 @@
               interface.
             </p>
             <div class="mt-5 mb-5 text-start">
-              <a href="#" class="primary-link"> View Project </a>
+              <a
+                href="https://bright-vacherin-5d3cc3.netlify.app"
+                target="_blank"
+                title="View Weather App"
+                class="primary-link"
+              >
+                View Project
+              </a>
             </div>
           </div>
           <div class="col-md-6">
@@ -169,7 +186,9 @@
               wanted.
             </p>
             <div class="mt-5">
-              <a href="#" class="primary-link">View Project </a>
+              <a href="#" title="View Yoga App" class="primary-link"
+                >View Project
+              </a>
             </div>
           </div>
         </div>
