--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <nav
-      class="navbar navbar-custom navbar-expand-lg bg-body-tertiary bg-dark sticky-top"
+      class="navbar navbar-custom navbar-expand-lg bg-body-tertiary bg-dark sticky-top navbar-dark"
       data-bs-theme="dark"
     >
       <div class="container-fluid">
