updated Projects and added new descriptions

--- a/projects.html
+++ b/projects.html
@@ -143,15 +143,15 @@
           <div class="col-md-6">
             <h2 class="mb-3 mt-5 text-start">Weather App</h2>
             <p class="text-start aboutParagraph">
-              Weather app provides current weather conditions and forecasts for
-              a user's location or any other city in the world. The app fetches
-              data from an API and displays information such as temperature,
-              humidity, wind speed, and precipitation on a user-friendly
+              This app pulls provides current weather conditions and forecasts
+              for a user's location or any other city in the world. The app
+              fetches data from an API and displays information such as
+              temperature, humidity, and wind speed on a user-friendly
               interface.
             </p>
             <div class="mt-5 mb-5 text-start">
               <a
-                href="https://bright-vacherin-5d3cc3.netlify.app"
+                href="https://venerable-kataifi-d6ac1b.netlify.app"
                 target="_blank"
                 title="View Weather App"
                 class="primary-link"
@@ -162,7 +162,7 @@
           </div>
           <div class="col-md-6">
             <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/093/946/original/Weather_app_.png?1692416746"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/106/382/original/Screen_Shot_2023-12-07_at_5.34.47_PM.png?1701995737"
               class="img-fluid rounded w-auto mt-5 projectImages"
             />
           </div>
@@ -172,21 +172,24 @@
         <div class="row mt-5">
           <div class="col-md-6">
             <img
-              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/093/949/original/Yoga_App.png?1692417080"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/106/380/original/Screen_Shot_2023-12-07_at_5.18.52_PM.png?1701995147"
               class="img-fluid rounded w-auto mt-5 projectImages"
             />
           </div>
           <div class="col-md-6">
-            <h2 class="mb-3 mt-5 text-start">Yoga</h2>
+            <h2 class="mb-3 mt-5 text-start">React Dictionary</h2>
             <p class="text-start aboutParagraph">
-              This project provides users with a list of benefits Yoga provides.
-              This webpage allows users to sign-up for emails regarding booking
-              a Yoga class that is suitable to their needs. A link is also
-              provided for the user to do their own research about Yoga if
-              wanted.
+              This app pulls data from a Dictionary API and provides
+              definitions, phonetics, synonyms, and examples for any
+              user-inputted word. I also utilized a photo gallery API in
+              conjunction with the dictionary API so that the app returns select
+              images based on user-inputted words.
             </p>
             <div class="mt-5">
-              <a href="#" title="View Yoga App" class="primary-link"
+              <a
+                href="https://coruscating-kitsune-f33c79.netlify.app"
+                title="View Dictionary App"
+                class="primary-link"
                 >View Project
               </a>
             </div>
